# llm_owl

./: .gitignore  README.md  cqs_example.json  cqs_example.yaml  example.ttl  example_rule.txt  generate_ontology.py  main.py  ontocop.py  pyproject.toml  system_step-by-step.md  validation_steps.jsonl  validator.py
