[project]
name = "owl-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.21.0",
    "openai>=2.11.0",
    "rdflib>=6.2.0",
    "pyyaml>=6.0.3",
    "lxml>=6.0.2",
    "owlready2>=0.49",
    "requests>=2.32.5",
]
